[package]
name = "ron_vm"
version = "0.1.0"
authors = ["Mario Sieg (KerboGames) <support@kerbogames.com>"]
edition = "2018"

[lib]
name = "ronin_runtime"
path = "src/lib.rs"

[[bin]]
name = "ronin_virtual_machine"
path = "src/bin.rs"

[features]
simd = []
multithreading = ["rayon"]
default = ["simd", "multithreading"]

[dependencies]
# Required:
bitflags = "1.2.1"

# Optional:
rayon = { version = "1.4.1", optional = true }