[package]
name = "ron_vm"
version = "0.1.0"
authors = ["Mario Sieg (KerboGames) <support@kerbogames.com>"]
edition = "2018"

[lib]
name = "ronin_runtime"
path = "src/lib.rs"

[[bin]]
name = "ronin_virtual_machine"
path = "src/bin.rs"

[features]
simd = []
multithreading = ["rayon"]
default = ["simd", "multithreading"]

[dependencies]
bitflags = "1.2.1"  # For bitflags
num_cpus = "1.13.0" # To get the number of cpu cores
smallvec = "1.6.1"  # A small, stack allocated vector
colored = "2.0.0"   # Cross platform terminal colors

# Optional:
rayon = { version = "1.5.0", optional = true }