[package]
name = "corium"
version = "0.1.0"
edition = "2018"
authors = ["Mario \"pinsrq\" Sieg <mt3000@gmx.de>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = []
concurrent_compilation = ["dashmap"]

[dependencies]
# Will be replaced by custom modified parser implementation
pest = "2.1.3"
pest_derive = "2.1.0"

uuid = { version = "0.8.2", features = ["v4"] }
colored = "2.0.0"
humantime = "2.1.0"
structopt = "0.3.23"
nominax_bytecode_interface = { path = "../../Nominax/ByteCodeInterface/Rust/NominaxByteCodeInterface"}

# required by concurrent compilation
dashmap = { version = "4.0.2", optional = true }
num_cpus = { version = "1.13.0", optional = true }
