[package]
name = "corium"
version = "0.1.1"
edition = "2018"
authors = ["Mario \"pinsrq\" Sieg <mt3000@gmx.de>"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
nominax_bytecode_interface = { path = "../../Nominax/ByteCodeInterface/Rust/NominaxByteCodeInterface" }

# Will be replaced by custom modified parser implementation later
# The custom lexer and parser will provide better error messages and performance
pest = "2.1.3"
pest_derive = "2.1.0"

uuid = { version = "0.8.2", features = ["v4"] }             # Unique IDs
colored = "2.0.0"                                           # Colored console printing
humantime = "2.1.0"                                         # Nice time formatting
structopt = "0.3.23"                                        # CLI argument parsing
toml = "0.5.8"                                              # TOML file de/serialization
serde = { version = "1.0.130", features = ["derive"] }      # Data de/serialization
walkdir = "2.3.2"                                           # Recursive directory iteration
num-traits = "0.2.14"                                       # Helper for enums and primitive number types
num-derive = "0.3.3"                                        # Helper for enums and primitive number types
