[package]
name = "corium_compiler"
version = "0.1.1"
edition = "2021"
authors = ["Mario \"pinsrq\" Sieg <mt3000@gmx.de>"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
serde = { version = "1.0.132", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
